<resources>
    <string name="app_name">All in on- MVVM-DI+Retrofit+Coroutines+Room</string>
    <string name="user_id_format">ID: %d</string>
    <string name="user_name_format">Name: %s</string>
    <string name="user_email_format">Email: %s</string>
    <string name="load_users">Load Users</string>
    <string name="users_title">✨ Amazing Users</string>
    <string name="users_subtitle">Discover our incredible user community</string>
    <string name="email_label">Email</string>
    <string name="user_id_label">ID</string>
    <string name="load_users_description">Click to load users from the database</string>
    <string name="contact_info">📧 Contact Information</string>
    <string name="copy_email">Copy email address</string>
    <string name="active_status">Active</string>
    <string name="premium_member">Premium</string>
</resources>